fix unremovable page break on backspace

--- a/package/styles/index.css
+++ b/package/styles/index.css
@@ -80,19 +80,18 @@ li > ol > li > ol > li:before {
   word-break: break-word;
 }
 
-div[data-page-break="true"] {
+div[data-page-break='true'] {
   opacity: 0.3;
-  background-color: #e9eaeb; 
+  background-color: #e9eaeb;
   height: 30px;
   margin-bottom: 4rem;
 }
 
-div[data-page-break="false"] {
-  border: none; 
+div[data-page-break='false'] {
+  border: none;
 }
 
 .remove-page-break {
-  cursor: pointer;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -104,6 +103,6 @@ div[data-page-break="false"] {
   display: none;
 }
 
-div[data-type="page-break"]:hover .remove-page-break-icon {
+div[data-type='page-break']:hover .remove-page-break-icon {
   display: inline-block;
 }
